Cleaned backend code, fixed wrapping around text in config map and secrets, deleted cluster search, added value showing in node and namespaces, fixed loading state for table

--- a/App/Frontend/src/app/search-table/config-map-table/config-map-table.component.css
+++ b/App/Frontend/src/app/search-table/config-map-table/config-map-table.component.css
@@ -17,7 +17,10 @@
     display: none;
     pointer-events: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
+
 
 .data-length-column {
     padding: 15px;
